Bug: Fixed scrolling issue on nav-menu & code improvements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
     
-    <!-- Javascript -->
+    <!-- JavaScript -->
     <script defer src="js/app.js"></script>
 
     <!-- Title icon -->
