Made the navigation bar respond to scorlling
It also includes some extra code related to about section which is incomplete for now

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Splash Screen -->
 
     <!-- Navbar -->
-    <header class="nav-header">
+    <header id="nav-header" class="nav-header">
         <nav class="navbar flex">
             
             <!-- Not sure if we need a div here -->
@@ -141,8 +141,17 @@
             </section>
 
             <!-- About -->
-            <section class="container">
+            <section id="about" class="container about flex">
+                <h1 class="heading flex">Who I am</h1>
 
+                <div class="about-box flex">
+                    <div class="about-text flex">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vel, praesentium doloribus dignissimos alias saepe delectus impedit recusandae veniam neque, itaque fuga, harum iusto eaque veritatis inventore fugiat aspernatur accusamus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consectetur earum maxime laboriosam, non dolorem consequuntur quidem est praesentium nulla laudantium quibusdam, asperiores eaque voluptatibus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores inventore adipisci velit sed, aspernatur fugiat praesentium ipsa soluta id perferendis error expedita recusandae nobis quae molestias eos enim veniam debitis maxime repellat animi reprehenderit porro est! Explicabo totam maxime odio.</p>
+                    </div>
+                    <a class="about-img" href=""></a>
+                </div>
             </section>
 
             <!-- Skills -->
