--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
             <div id="nav-menu" class="nav-box flex" toggle="false"> <!-- Needed div to "box-in" two elements (btn & list) to send them to right -->
                 <ul class="nav-list flex">
-                    <li><a class="nav-list-item" href="#">About</a></li>
-                    <li><a class="nav-list-item" href="#">Skills</a></li>
-                    <li><a class="nav-list-item" href="#">Experience</a></li>
-                    <li><a class="nav-list-item" href="#">Work</a></li>
-                    <li><a class="nav-list-item" href="#">Contact</a></li>
+                    <li><a class="nav-list-item" href="#about">About</a></li>
+                    <li><a class="nav-list-item" href="#skills">Skills</a></li>
+                    <li><a class="nav-list-item" href="#experience">Experience</a></li>
+                    <li><a class="nav-list-item" href="#work">Work</a></li>
+                    <li><a class="nav-list-item" href="#contact">Contact</a></li>
                 </ul>
                 <a class="btn resume-btn" href="#" target="_blank" aria-label="Resume">Resume</a>
             </div>
@@ -148,29 +148,29 @@
                     <div class="about-text flex">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vel, praesentium doloribus dignissimos alias saepe delectus impedit recusandae veniam neque, itaque fuga, harum iusto eaque veritatis inventore fugiat aspernatur accusamus?</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consectetur earum maxime laboriosam, non dolorem consequuntur quidem est praesentium nulla laudantium quibusdam, asperiores eaque voluptatibus.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores inventore adipisci velit sed, aspernatur fugiat praesentium ipsa soluta id perferendis error expedita recusandae nobis quae molestias eos enim veniam debitis maxime repellat animi reprehenderit porro est! Explicabo totam maxime odio.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero consequuntur magni, dolore aut iure optio quis nulla corporis culpa, quo, expedita vel pariatur nostrum dolor?</p>
                     </div>
-                    <a class="about-img" href=""></a>
+                    <img class="about-img" href="" src="https://picsum.photos/seed/picsum/300/300"></img>
                 </div>
             </section>
 
             <!-- Skills -->
-            <section>
+            <section id="skills" class="container">
 
             </section>
 
             <!-- Experience -->
-            <section>
+            <section id="experience" class="container">
 
             </section>
 
             <!-- Work -->
-            <section>
+            <section id="work" class="container">
 
             </section>
 
             <!-- Contact -->
-            <section>
+            <section id="contact" class="container">
 
             </section>
         </main>
