Fix: Make the home about me button function
Completely forgot about it @_@

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h1 class="ht-intro">Hi, my name is</h1>
                     <h2 class="ht-name">Ali Haider.</h2>
                     <p class="ht-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi perspiciatis sunt deserunt dolore amet, optio impedit? Est, quasi! Culpa totam aliquid temporibus eos, rerum quia reiciendis modi veritatis. Deleniti, in?</p>
-                    <a class="btn ht-btn" href="#">About Me
+                    <a class="btn ht-btn" href="#about">About Me
                         <svg class="btn-arrow" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 16">
                             <title>Arrow</title>
                             <path fill="currentColor" fill-rule="evenodd" d="m45.343.933 6.364 6.364a1 1 0 0 1 0 1.414l-6.364 6.364a1 1 0 0 1-1.414-1.414l4.657-4.657H1a1 1 0 0 1 0-2h47.586l-4.657-4.657A1 1 0 1 1 45.343.933Z" clip-rule="evenodd"/>
