Fix: Fixed heading class

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
             <!-- About -->
             <section id="about" class="container about flex">
-                <h1 class="heading flex">Who I am</h1>
+                <h1 class="heading">Who I am</h1>
 
                 <div class="about-box flex">
                     <div class="about-text flex">
