Chore: Add content to the website

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 <div class="home-text flex">
                     <h1 class="ht-intro">Hi, my name is</h1>
                     <h2 class="ht-name">Ali Haider.</h2>
-                    <p class="ht-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi perspiciatis sunt deserunt dolore amet, optio impedit? Est, quasi! Culpa totam aliquid temporibus eos, rerum quia reiciendis modi veritatis. Deleniti, in?</p>
+                    <p class="ht-desc">I’m a passionate software developer currently focused
+                        on expanding my experience & skillset designing & 
+                        developing exceptional websites & softwares.</p>
                     <a class="btn ht-btn" href="#about">About Me
                         <svg class="btn-arrow" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 16">
                             <title>Arrow</title>
@@ -146,9 +148,10 @@
 
                 <div class="about-box flex">
                     <div class="about-text flex">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur vel, praesentium doloribus dignissimos alias saepe delectus impedit recusandae veniam neque, itaque fuga, harum iusto eaque veritatis inventore fugiat aspernatur accusamus?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consectetur earum maxime laboriosam, non dolorem consequuntur quidem est praesentium nulla laudantium quibusdam, asperiores eaque voluptatibus.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero consequuntur magni, dolore aut iure optio quis nulla corporis culpa, quo, expedita vel pariatur nostrum dolor?</p>
+                        <p>Hello! My name is Ali Haider, accountant by qualification and a self-taught software developer by passion. I enjoy creating softwares for both fun and living.</p>
+                        <p>My interest in programming peaked back in 2017 when I casually decided to continue an abandoned open source android app. I went in blindfolded. It was overwhelming, but it helped me learn a lot.</p>
+                        <p>Who could’ve thought that a decision taken on a whim would help me find my passion?</p>
+                        <p>Currently, I have been focused on Full Stack aspect of software development with a little bit of Rust & C on the side.</p>
                     </div>
                     <!-- <img class="about-img" href="" src="https://picsum.photos/seed/picsum/300/300"></img> -->
                 </div>
