Chore: Update content

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <h1 class="ht-intro">Hi, my name is</h1>
                     <h2 class="ht-name">Ali Haider.</h2>
                     <p class="ht-desc">I’m a passionate software developer currently focused
-                        on expanding my experience & skillset designing & 
-                        developing exceptional websites & softwares.</p>
+                        on expanding my experience and skillset by designing and 
+                        developing exceptional websites and software.</p>
                     <a class="btn ht-btn" href="#about">About Me
                         <svg class="btn-arrow" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 16">
                             <title>Arrow</title>
@@ -148,7 +148,7 @@
 
                 <div class="about-box flex">
                     <div class="about-text flex">
-                        <p>Hello! My name is Ali Haider, accountant by qualification and a self-taught software developer by passion. I enjoy creating softwares for both fun and living.</p>
+                        <p>Hello! My name is Ali Haider, accountant by qualification and a self-taught software developer by passion. I enjoy creating software for both fun and living.</p>
                         <p>My interest in programming peaked back in 2017 when I casually decided to continue an abandoned open source android app. I went in blindfolded. It was overwhelming, but it helped me learn a lot.</p>
                         <p>Who could’ve thought that a decision taken on a whim would help me find my passion?</p>
                         <p>Currently, I have been focused on Full Stack aspect of software development with a little bit of Rust & C on the side.</p>
