--- a/index.html
+++ b/index.html
@@ -82,26 +82,26 @@
             <div class="social flex">
                 <ul class="social-list flex">
                     <li>
-                        <a class="social-items" href="https://github.com/ManorSailor" target="_blank">
+                        <a class="social-items" href="https://github.com/ManorSailor" target="_blank" rel="noopener noreferrer">
                             <svg class="icons" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24"><path fill="currentColor" d="M18.663 3.87C19.555 4.863 20 6.021 20 7.345c0 4.797-2.943 6.203-5.709 6.617.357.579.446 1.24.446 1.903v3.39c0 .414-.268.662-.624.662a.752.752 0 0 1-.508-.19.651.651 0 0 1-.155-.217.611.611 0 0 1-.051-.255v-3.39a2.115 2.115 0 0 0-.117-1.03 2.255 2.255 0 0 0-.597-.873l.446-1.075c2.766-.331 5.62-1.159 5.62-5.625 0-1.075-.445-2.068-1.248-2.895l-.179-.661c.34-.793.37-1.67.089-2.482-.445.082-1.338.248-2.853 1.241l-.537.082a14.04 14.04 0 0 0-6.421 0l-.537-.082c-1.604-.91-2.496-1.158-2.943-1.158-.268.827-.268 1.736.088 2.482l-.177.66c-.892.828-1.339 1.903-1.339 2.896 0 4.383 2.677 5.293 5.62 5.624l.357 1.076c-.535.496-.803 1.158-.714 1.82v3.473a.61.61 0 0 1-.051.255.651.651 0 0 1-.155.216.712.712 0 0 1-.233.143.752.752 0 0 1-.274.048.752.752 0 0 1-.275-.048.712.712 0 0 1-.233-.143.65.65 0 0 1-.154-.216.61.61 0 0 1-.052-.255v-1.902c-2.943.58-4.103-.827-4.995-1.901-.446-.497-.803-.91-1.25-.993-.088-.083-.356-.414-.267-.745.09-.33.446-.579.804-.413.892.165 1.426.827 1.96 1.406.805.993 1.608 1.902 4.016 1.406v-.33c-.089-.662.089-1.324.446-1.903-2.677-.496-5.799-1.903-5.799-6.617 0-1.324.446-2.482 1.339-3.475-.268-1.157-.179-2.398.267-3.39L3.497.15C3.676.067 4.925-.181 7.51 1.307a14.427 14.427 0 0 1 6.512 0c2.5-1.572 3.838-1.325 4.016-1.241l.446.33c.446 1.159.536 2.317.179 3.474Z"/></svg>
                         </a>
                     </li>
 
                     <li>
-                        <a class="social-items" href="https://www.linkedin.com/in/ali-sars/" target="_blank">
+                        <a class="social-items" href="https://www.linkedin.com/in/ali-sars/" target="_blank" rel="noopener noreferrer">
                             <svg class="icons" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -1 24 24"><path fill="currentColor" stroke="currentColor" stroke-width=".2" d="M3.006 5.813H3c-.475 0-.982-.195-1.329-.547l-.003-.003c-.376-.351-.568-.865-.568-1.384 0-.517.19-1 .571-1.388.347-.352.82-.546 1.362-.546.474 0 .948.192 1.296.546.381.388.571.871.571 1.388 0 .519-.192 1.033-.568 1.384l-.003.003c-.35.357-.824.578-1.323.547ZM16.13 12.88l.003.003c.303.278.435.718.435 1.316v7.289c0 .201.098.395.237.536.139.141.33.242.53.242h3.333c.2 0 .39-.1.53-.242a.785.785 0 0 0 .236-.536v-8.746c0-2.764-2.075-4.914-4.766-4.914h-.7c-1.238 0-2.416.51-3.234 1.338v-.22a.785.785 0 0 0-.237-.537.764.764 0 0 0-.53-.242H8.634a.8.8 0 0 0-.512.208.72.72 0 0 0-.254.536v12.644c0 .223.11.402.257.523.146.12.335.188.51.188H12.3a.827.827 0 0 0 .51-.188.671.671 0 0 0 .257-.523v-7.322c0-1.072.763-1.9 1.733-1.9.508 0 .982.194 1.329.547Zm-3.896 1.353v7.155H8.767V9.046H11.9v2.314l.171-.174.934-.95.005-.005.005-.007c.647-.922 1.783-1.517 2.985-1.517h.7c2.174 0 3.867 1.782 3.867 4.036v8.646h-3.1l-.034-7.188c0-.83-.204-1.47-.662-1.935a2.7 2.7 0 0 0-1.938-.81h-.002c-1.458.036-2.598 1.236-2.598 2.778Zm-9.2-13.167a2.72 2.72 0 0 0-1.971.81 2.818 2.818 0 0 0-.829 2.002c0 .773.312 1.476.829 2.002.516.525 1.242.844 1.94.81h.065c.695 0 1.353-.284 1.871-.81a2.84 2.84 0 0 0 .829-2c.034-.742-.28-1.445-.795-1.97a2.603 2.603 0 0 0-1.939-.844Zm1.3 7.101h-2.7c-.592 0-1.066.49-1.066 1.117V21.15c0 .596.51 1.117 1.1 1.117h2.666c.588 0 1.1-.52 1.1-1.083V9.285c0-.596-.51-1.117-1.1-1.117Zm.234 13.016a.19.19 0 0 1-.07.14.253.253 0 0 1-.164.065H1.667a.233.233 0 0 1-.158-.076.244.244 0 0 1-.076-.163V9.285c0-.06.024-.121.064-.168a.182.182 0 0 1 .136-.07h2.7c.05 0 .11.026.158.075.049.05.076.11.076.163v11.899Z"/></svg>
                         </a>
                     </li>
 
                     <li>
-                        <a class="social-items" href="#" target="_blank">
+                        <a class="social-items" href="#" target="_blank" rel="noopener noreferrer">
                             <svg class="icons" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24"><path fill="currentColor" d="M15.246 9.7a5.268 5.268 0 0 0-5.004-4.949 5.26 5.26 0 0 0-5.49 5.494 5.268 5.268 0 0 0 4.951 5.001 5.224 5.224 0 0 0 3.07-.786.504.504 0 0 0 .09-.783l-.007-.008a.506.506 0 0 0-.627-.067c-.66.41-1.44.644-2.274.635-2.356-.025-4.257-2.003-4.19-4.358a4.242 4.242 0 0 1 4.506-4.108 4.248 4.248 0 0 1 3.951 3.873 4.216 4.216 0 0 1-.478 2.337.506.506 0 0 0 .085.597l.008.008a.502.502 0 0 0 .797-.114c.44-.82.668-1.768.612-2.773ZM16.78 3.898a1.356 1.356 0 1 1-2.712 0 1.356 1.356 0 0 1 2.712 0Z"/><path fill="currentColor" fill-rule="evenodd" d="M15.777 0H4.223A4.228 4.228 0 0 0 0 4.223v11.554A4.228 4.228 0 0 0 4.223 20h11.554A4.228 4.228 0 0 0 20 15.777V4.223A4.228 4.228 0 0 0 15.777 0Zm3.206 15.777a3.21 3.21 0 0 1-3.206 3.206H4.223a3.21 3.21 0 0 1-3.206-3.206V4.223a3.21 3.21 0 0 1 3.206-3.206h11.554a3.21 3.21 0 0 1 3.206 3.206v11.554Z" clip-rule="evenodd"/></svg>
                         </a>
                     </li>
                 </ul>
 
                 <div class="mail-box flex">
-                    <a href="mailto:#" aria-label="email">unknown@gmail.com</a>
+                    <a href="mailto:SarsSappy@gmail.com" target="_blank" rel="noopener noreferrer">SarSappy@gmail.com</a>
                 </div>
             </div>
 
@@ -315,7 +315,7 @@
 
                 <div class="contact-main flex">
                     <p>I'm currently available for new opportunities. Whether you have any queries or just want to talk, feel free to text me & I will try my best to get back to you!</p>
-                    <a class="btn" href="mailto:" target="_blank" rel="noopener noreferrer">Say Hello</a>
+                    <a class="btn" href="mailto:SarsSappy@gmail.com" target="_blank" rel="noopener noreferrer">Say Hello</a>
                 </div>
             </section>
         </main>
