Chore: Fixed links

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                     </li>
 
                     <li>
-                        <a class="social-items" href="#" target="_blank" rel="noopener noreferrer">
+                        <a class="social-items" href="https://www.instagram.com/manor_sailor/" target="_blank" rel="noopener noreferrer">
                             <svg class="icons" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24"><path fill="currentColor" d="M15.246 9.7a5.268 5.268 0 0 0-5.004-4.949 5.26 5.26 0 0 0-5.49 5.494 5.268 5.268 0 0 0 4.951 5.001 5.224 5.224 0 0 0 3.07-.786.504.504 0 0 0 .09-.783l-.007-.008a.506.506 0 0 0-.627-.067c-.66.41-1.44.644-2.274.635-2.356-.025-4.257-2.003-4.19-4.358a4.242 4.242 0 0 1 4.506-4.108 4.248 4.248 0 0 1 3.951 3.873 4.216 4.216 0 0 1-.478 2.337.506.506 0 0 0 .085.597l.008.008a.502.502 0 0 0 .797-.114c.44-.82.668-1.768.612-2.773ZM16.78 3.898a1.356 1.356 0 1 1-2.712 0 1.356 1.356 0 0 1 2.712 0Z"/><path fill="currentColor" fill-rule="evenodd" d="M15.777 0H4.223A4.228 4.228 0 0 0 0 4.223v11.554A4.228 4.228 0 0 0 4.223 20h11.554A4.228 4.228 0 0 0 20 15.777V4.223A4.228 4.228 0 0 0 15.777 0Zm3.206 15.777a3.21 3.21 0 0 1-3.206 3.206H4.223a3.21 3.21 0 0 1-3.206-3.206V4.223a3.21 3.21 0 0 1 3.206-3.206h11.554a3.21 3.21 0 0 1 3.206 3.206v11.554Z" clip-rule="evenodd"/></svg>
                         </a>
                     </li>
                 </ul>
 
                 <div class="mail-box flex">
-                    <a href="mailto:SarsSappy@gmail.com" target="_blank" rel="noopener noreferrer">SarSappy@gmail.com</a>
+                    <a href="mailto:SarsSappy@gmail.com" target="_blank" rel="noopener noreferrer">SarsSappy@gmail.com</a>
                 </div>
             </div>
 
@@ -338,7 +338,7 @@
                 </li>
 
                 <li>
-                    <a class="footer-social-items" href="#" target="_blank">
+                    <a class="footer-social-items" href="https://www.instagram.com/manor_sailor/" target="_blank">
                         <svg class="icons" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 24 24"><path fill="currentColor" d="M15.246 9.7a5.268 5.268 0 0 0-5.004-4.949 5.26 5.26 0 0 0-5.49 5.494 5.268 5.268 0 0 0 4.951 5.001 5.224 5.224 0 0 0 3.07-.786.504.504 0 0 0 .09-.783l-.007-.008a.506.506 0 0 0-.627-.067c-.66.41-1.44.644-2.274.635-2.356-.025-4.257-2.003-4.19-4.358a4.242 4.242 0 0 1 4.506-4.108 4.248 4.248 0 0 1 3.951 3.873 4.216 4.216 0 0 1-.478 2.337.506.506 0 0 0 .085.597l.008.008a.502.502 0 0 0 .797-.114c.44-.82.668-1.768.612-2.773ZM16.78 3.898a1.356 1.356 0 1 1-2.712 0 1.356 1.356 0 0 1 2.712 0Z"/><path fill="currentColor" fill-rule="evenodd" d="M15.777 0H4.223A4.228 4.228 0 0 0 0 4.223v11.554A4.228 4.228 0 0 0 4.223 20h11.554A4.228 4.228 0 0 0 20 15.777V4.223A4.228 4.228 0 0 0 15.777 0Zm3.206 15.777a3.21 3.21 0 0 1-3.206 3.206H4.223a3.21 3.21 0 0 1-3.206-3.206V4.223a3.21 3.21 0 0 1 3.206-3.206h11.554a3.21 3.21 0 0 1 3.206 3.206v11.554Z" clip-rule="evenodd"/></svg>
                     </a>
                 </li>
