feat: CSS only ham icon
Currently, there are no animations. They will be added in the future.
Reason to add a CSS only ham icon is to reduce the HTML file footprint

--- a/index.html
+++ b/index.html
@@ -45,20 +45,10 @@
                 </a>
             </div>
 
-            <div>
-                <svg id="ham" class="ham" viewBox="0 0 40 18" xmlns="http://www.w3.org/2000/svg">
-                    <g id="ham-menu">
-                        <g id="line-one">
-                            <line x1="1" y1="1" x2="39" y2="1" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </g>
-                        <g id="line-two">
-                            <line x1="1" y1="9" x2="39" y2="9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </g>
-                        <g id="line-three">
-                            <line x1="1" y1="17" x2="39" y2="17" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </g>
-                    </g>
-                </svg>
+            <div id="ham" class="ham">
+                <span class="ham-lines"></span>
+                <span class="ham-lines"></span>
+                <span class="ham-lines"></span>
             </div>
 
             <div id="nav-menu" class="nav-box flex" toggle="false"> <!-- Needed div to "box-in" two elements (btn & list) to send them to right -->
